--- a/src/app/modules/dashboard/preference/preference.component.html
+++ b/src/app/modules/dashboard/preference/preference.component.html
@@ -51,15 +51,9 @@
           <span class="text-xs text-color font-normal">Stopword</span>
         </div>
       </ng-template>
-      <p>
-        At vero eos et accusamus et iusto odio dignissimos ducimus qui
-        blanditiis praesentium voluptatum deleniti atque corrupti quos dolores
-        et quas molestias excepturi sint occaecati cupiditate non provident,
-        similique sunt in culpa qui officia deserunt mollitia animi, id est
-        laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita
-        distinctio. Nam libero tempore, cum soluta nobis est eligendi optio
-        cumque nihil impedit quo minus.
-      </p>
+      <ng-template pTemplate="content">
+        <app-stopword></app-stopword>
+      </ng-template>
     </p-tabPanel>
     <p-tabPanel>
       <ng-template pTemplate="header">
@@ -68,15 +62,9 @@
           <span class="text-xs text-color font-normal">File Export</span>
         </div>
       </ng-template>
-      <p>
-        At vero eos et accusamus et iusto odio dignissimos ducimus qui
-        blanditiis praesentium voluptatum deleniti atque corrupti quos dolores
-        et quas molestias excepturi sint occaecati cupiditate non provident,
-        similique sunt in culpa qui officia deserunt mollitia animi, id est
-        laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita
-        distinctio. Nam libero tempore, cum soluta nobis est eligendi optio
-        cumque nihil impedit quo minus.
-      </p>
+      <ng-template pTemplate="content">
+        <app-file-export></app-file-export>
+      </ng-template>
     </p-tabPanel>
   </p-tabView>
 </section>
