--- a/src/app/modules/dashboard/preference/file-export/file-export.component.html
+++ b/src/app/modules/dashboard/preference/file-export/file-export.component.html
@@ -1,1 +1,245 @@
-<p>file-export works!</p>
+<div>
+  <p-toast></p-toast>
+  <div class="flex justify-content-between align-items-center mb-5">
+    <div>
+      <p-button
+        severity="secondary"
+        [plain]="true"
+        iconPos="left"
+        styleClass="border-0"
+        [style]="{ backgroundColor: '#F1F4FA' }"
+        (onClick)="modalAddOpen = true"
+      >
+        <div class="flex gap-2 align-items-center">
+          <i class="pi pi-plus text-primary"></i>
+          <div class="text-color text-sm">Column</div>
+        </div>
+      </p-button>
+    </div>
+  </div>
+  <div>
+    <div class="card">
+      <p-table
+        [value]="columns"
+        dataKey="no"
+        [rows]="10"
+        [totalRecords]="totalRecords"
+        [showFirstLastIcon]="false"
+        [loading]="loading"
+        [tableStyle]="{ 'min-width': '50rem' }"
+      >
+        <ng-template pTemplate="header">
+          <tr class="text-sm font-medium">
+            <th class="w-6rem">
+              <div class="flex align-items-center gap-2">
+                <span>No</span>
+                <i pSortableColumn="id" class="pi pi-angle-down"></i>
+              </div>
+            </th>
+            <th>
+              <div class="flex align-items-center gap-2">
+                Column Name
+                <i pSortableColumn="name" class="pi pi-angle-down"></i>
+              </div>
+            </th>
+            <th style="width: 4rem" class="text-center">Action</th>
+          </tr>
+        </ng-template>
+        <ng-template pTemplate="body" let-column let-expanded="expanded">
+          <tr class="text-sm">
+            <td>
+              <div class="flex align-items-center gap-2">
+                {{ column.id }}
+              </div>
+            </td>
+            <td>
+              <div class="flex align-items-center gap-1 w-max">
+                <div>
+                  {{ column.name }}
+                </div>
+              </div>
+            </td>
+            <td>
+              <div class="flex gap-2">
+                <p-button
+                  [outlined]="true"
+                  [text]="true"
+                  size="small"
+                  styleClass="p-2 border-1 border-200"
+                  (onClick)="openEditModal(column)"
+                >
+                  <icon-pencil class="fill-text-color"></icon-pencil>
+                </p-button>
+                <p-button
+                  [outlined]="true"
+                  [text]="true"
+                  size="small"
+                  styleClass="p-2 border-1 border-200"
+                  (onClick)="deleteColumn(column)"
+                >
+                  <i class="pi pi-trash text-red-500"></i>
+                </p-button>
+              </div>
+            </td>
+          </tr>
+        </ng-template>
+      </p-table>
+      <p-paginator
+        (onPageChange)="onPageChange($event)"
+        [first]="first"
+        [rows]="rows"
+        [totalRecords]="totalRecords"
+        [templateLeft]="customLeftTemplate"
+        [showFirstLastIcon]="false"
+      >
+        <ng-template #customLeftTemplate let-state>
+          <span class="text-sm text-color">
+            Total Column:
+            <span class="text-sm font-semibold">{{
+              state.totalRecords
+            }}</span></span
+          >
+        </ng-template>
+      </p-paginator>
+    </div>
+  </div>
+</div>
+
+<p-dialog
+  header="Header"
+  [(visible)]="modalAddOpen"
+  [modal]="true"
+  [style]="{ width: '50rem' }"
+  [breakpoints]="{ '1199px': '75vw', '575px': '90vw' }"
+>
+  <ng-template pTemplate="header">
+    <div class="inline-flex align-items-center justify-content-center gap-2">
+      <span class="font-bold text-md">Create Column</span>
+    </div>
+  </ng-template>
+  <form [formGroup]="createValues" class="flex gap-4">
+    <div class="flex flex-column flex-1 gap-2">
+      <label for="name" class="font-semibold text-sm">Column Name</label>
+      <input
+        pInputText
+        formControlName="name"
+        id="name"
+        placeholder="Column Name"
+      />
+    </div>
+    <div class="flex flex-column flex-1 gap-2">
+      <label for="autoCheck" class="font-semibold text-sm">Status</label>
+      <p-dropdown
+        formControlName="autoCheck"
+        styleClass="w-full"
+        [options]="statusOptions"
+        optionLabel="label"
+        optionValue="value"
+        appendTo="body"
+      ></p-dropdown>
+    </div>
+  </form>
+  <ng-template pTemplate="footer">
+    <p-button
+      (click)="modalAddOpen = false"
+      label="Cancel"
+      [outlined]="true"
+    ></p-button>
+    <p-button
+      (click)="createColumn()"
+      label="Submit"
+      pAutoFocus
+      [autofocus]="true"
+      [disabled]="!this.createValues.controls.name.valid"
+    ></p-button>
+  </ng-template>
+</p-dialog>
+
+<p-dialog
+  header="Header"
+  [(visible)]="modalUpdateOpen"
+  [modal]="true"
+  [style]="{ width: '50rem' }"
+  [breakpoints]="{ '1199px': '75vw', '575px': '90vw' }"
+>
+  <ng-template pTemplate="header">
+    <div class="inline-flex align-items-center justify-content-center gap-2">
+      <span class="font-bold text-md">Detail Column</span>
+    </div>
+  </ng-template>
+  <form [formGroup]="editedValues" class="flex gap-4">
+    <div class="flex flex-column flex-1 gap-2">
+      <label for="name" class="font-semibold text-sm">Column Name</label>
+      <input
+        pInputText
+        formControlName="name"
+        id="name"
+        placeholder="Column Name"
+      />
+    </div>
+    <div class="flex flex-column flex-1 gap-2">
+      <label for="autoCheck" class="font-semibold text-sm">Status</label>
+      <p-dropdown
+        formControlName="autoCheck"
+        styleClass="w-full"
+        [options]="statusOptions"
+        optionLabel="label"
+        optionValue="value"
+        appendTo="body"
+      ></p-dropdown>
+    </div>
+  </form>
+  <ng-template pTemplate="footer">
+    <p-button
+      (click)="modalUpdateOpen = false"
+      label="Cancel"
+      pAutoFocus
+      [outlined]="true"
+    ></p-button>
+    <p-button
+      (click)="updateColumn()"
+      label="Save"
+      pAutoFocus
+      [disabled]="!this.editedValues.controls.name"
+      [autofocus]="true"
+    ></p-button>
+  </ng-template>
+</p-dialog>
+
+<p-dialog
+  header="Header"
+  [(visible)]="modalDeleteOpen"
+  [modal]="true"
+  [style]="{ width: '50rem' }"
+  [breakpoints]="{ '1199px': '75vw', '575px': '90vw' }"
+>
+  <ng-template pTemplate="header">
+    <div class="inline-flex align-items-center justify-content-center gap-2">
+      <span class="font-bold text-md">Delete Column</span>
+    </div>
+  </ng-template>
+  <div class="text-center">
+    <icon-alert></icon-alert>
+    <div class="text-2xl font-semibold mb-2">Are you sure?</div>
+    <div class="text-md">
+      Do you really want to delete this data? <br />this process can't be
+      undone.
+    </div>
+  </div>
+  <ng-template pTemplate="footer">
+    <p-button
+      (click)="modalDeleteOpen = false"
+      label="Cancel"
+      pAutoFocus
+      [outlined]="true"
+    ></p-button>
+    <p-button
+      (click)="confirmDeleteColumn()"
+      [loading]="isDeleting"
+      label="Delete"
+      severity="danger"
+      pAutoFocus
+      [autofocus]="true"
+    ></p-button>
+  </ng-template>
+</p-dialog>
