--- a/src/app/modules/dashboard/preference/stopword/stopword.component.html
+++ b/src/app/modules/dashboard/preference/stopword/stopword.component.html
@@ -21,7 +21,7 @@
     <div class="card">
       <p-table
         [value]="stopwords"
-        dataKey="category_set"
+        dataKey="no"
         [rows]="10"
         [totalRecords]="totalRecords"
         [showFirstLastIcon]="false"
@@ -188,7 +188,7 @@
 >
   <ng-template pTemplate="header">
     <div class="inline-flex align-items-center justify-content-center gap-2">
-      <span class="font-bold text-md">Delete Spokeperson</span>
+      <span class="font-bold text-md">Delete Stopword</span>
     </div>
   </ng-template>
   <div class="text-center">
