--- a/src/app/modules/dashboard/share/share.component.html
+++ b/src/app/modules/dashboard/share/share.component.html
@@ -1,1 +1,64 @@
-<p>share works!</p>
+<section>
+  <div class="flex gap-8">
+    <div class="text-2xl font-semibold flex-shrink-0">Share Content</div>
+    <div class="text-sm">
+      Reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+      pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa
+      qui officia deserunt mollit anim id est laborum.
+    </div>
+  </div>
+  <p-divider></p-divider>
+  <form [formGroup]="formGroup" class="flex flex-column gap-4">
+    <div class="flex gap-4">
+      <div class="flex flex-column gap-2 flex-1">
+        <label for="headline" class="text-sm font-semibold">Headline</label>
+        <input pInputText formControlName="headline" id="headline" />
+      </div>
+      <div class="flex flex-column gap-2 flex-1">
+        <label for="cc" class="text-sm font-semibold">cc</label>
+        <input pInputText formControlName="cc" id="cc" />
+      </div>
+    </div>
+    <div class="flex flex-column gap-2 flex-1">
+      <label for="subline" class="text-sm font-semibold">Subline</label>
+      <input pInputText formControlName="subline" id="subline" />
+    </div>
+    <div class="flex gap-4">
+      <div class="flex flex-column gap-2 flex-1">
+        <label for="editorDesk" class="text-sm font-semibold"
+          >Editor Desk</label
+        >
+        <p-selectButton
+          id="editorDesk"
+          [options]="editorDeskOptions"
+          formControlName="editorDesk"
+          optionLabel="name"
+          optionValue="value"
+        ></p-selectButton>
+      </div>
+      <div class="flex flex-column gap-2 flex-1">
+        <label for="media" class="text-sm font-semibold">Media Select</label>
+        <p-multiSelect
+          [options]="mediaOptions"
+          formControlName="media"
+          id="media"
+          optionLabel="media_name"
+          optionValue="media_name"
+          placeholder="Select Media"
+          styleClass="w-full"
+          [virtualScroll]="true"
+          [virtualScrollItemSize]="38"
+        ></p-multiSelect>
+      </div>
+    </div>
+    <file-upload [form]="formGroup"></file-upload>
+    <textarea
+      rows="5"
+      cols="30"
+      pInputTextarea
+      placeholder="Content"
+      formControlName="content"
+    ></textarea>
+    <p-button label="Send Email" (onClick)="sendEmail()"></p-button>
+  </form>
+</section>
