--- a/src/app/core/components/file-upload/file-upload.component.scss
+++ b/src/app/core/components/file-upload/file-upload.component.scss
@@ -1,11 +1,12 @@
 :host ::ng-deep {
   .drop-zone {
     width: 100%;
-    height: 140px;
+    height: 206px;
     border: 1px solid #d1d5db;
     display: flex;
     align-items: center;
     justify-content: center;
+    position: relative;
     cursor: pointer;
   }
 
