--- a/src/app/modules/dashboard/share/share.component.html
+++ b/src/app/modules/dashboard/share/share.component.html
@@ -1,4 +1,5 @@
 <section>
+  <p-toast></p-toast>
   <div class="flex gap-8">
     <div class="text-2xl font-semibold flex-shrink-0">Share Content</div>
     <div class="text-sm">
@@ -59,6 +60,16 @@
       placeholder="Content"
       formControlName="content"
     ></textarea>
-    <p-button label="Send Email" (onClick)="sendEmail()"></p-button>
+    <p-button
+      label="Send Email"
+      (onClick)="sendEmail()"
+      [loading]="isSending"
+      [disabled]="
+        !formGroup.controls.content.valid &&
+        !formGroup.controls.headline.valid &&
+        !formGroup.controls.editorDesk.valid &&
+        !formGroup.controls.subline.valid
+      "
+    ></p-button>
   </form>
 </section>
