--- a/src/app/modules/dashboard/dashboard.component.html
+++ b/src/app/modules/dashboard/dashboard.component.html
@@ -108,7 +108,7 @@
     </aside>
     <section
       [ngClass]="{
-        'w-full md:w-full lg:w-full xl:w-10 xl:max-w-10': showFilter,
+        'w-full md:w-full lg:w-full xl:w-10 xl:max-w-10 overflow-x-hidden': showFilter,
         'w-full': !showFilter
       }"
     >
