--- a/src/app/modules/dashboard/media-sov/statements/statements.component.html
+++ b/src/app/modules/dashboard/media-sov/statements/statements.component.html
@@ -15,7 +15,10 @@
       scrollHeight="500px"
     >
       <ng-template pTemplate="item" let-item let-options="options">
-        <div class="grid grid-nogutter">
+        <div
+          class="grid grid-nogutter cursor-pointer"
+          [routerLink]="'/dashboard/articles/' + item.article_id"
+        >
           <div class="col-12">
             <div
               class="flex flex-column xl:flex-row xl:align-items-start py-1 gap-3"
