--- a/src/app/modules/dashboard/overview/overview.component.html
+++ b/src/app/modules/dashboard/overview/overview.component.html
@@ -1,7 +1,7 @@
 <section style="background-color: #fefefe">
   <app-overview-tiles></app-overview-tiles>
   <p-divider styleClass="py-4"></p-divider>
-  <div class="grid w-full">
+  <div class="grid w-full mb-5">
     <div class="col-12 xl:col-6 lg:col-12 md:col-12 xl:mb-0 lg:mb-0 mb-5">
       <app-top-city></app-top-city>
     </div>
@@ -9,6 +9,7 @@
       <app-top-article></app-top-article>
     </div>
   </div>
+  <app-headline-news></app-headline-news>
   <p-divider styleClass="py-4"></p-divider>
   <app-top-media></app-top-media>
 </section>
