Overview: Top article (Selengkapnya)

--- a/src/app/modules/dashboard/overview/top-article/top-article.component.html
+++ b/src/app/modules/dashboard/overview/top-article/top-article.component.html
@@ -7,7 +7,7 @@
     </div>
     <div>
       <a
-        routerLink=""
+        [routerLink]="'/dashboard/top-articles'"
         class="flex align-items-center gap-2 no-underline text-color"
       >
         <div class="text-sm font-normal underline">Selengkapnya</div>
