--- a/src/app/modules/dashboard/analyze/top-issue/media-visibility/media-visibility.component.html
+++ b/src/app/modules/dashboard/analyze/top-issue/media-visibility/media-visibility.component.html
@@ -31,7 +31,7 @@
             *ngIf="!visibilityPieActionButton.toggle.value"
             class="flex align-items-center justify-content-center gap-6"
           >
-            <div id="legend-container" class="flex align-items-center gap-6">
+            <div id="legend-container" class="flex flex-column justify-content-center align-items-center gap-6">
               <p-chart
                 type="pie"
                 [data]="visibilityPieData"
