--- a/src/app/modules/dashboard/components/filter/filter.component.html
+++ b/src/app/modules/dashboard/components/filter/filter.component.html
@@ -47,26 +47,63 @@
     <label for="media">Media</label>
   </span>
   <ng-container *ngIf="isCustom">
-    <span class="select-container">
-      <p-calendar
-        [(ngModel)]="startDate"
-        inputId="startDate"
-        class="datepicker"
-        styleClass="w-full"
-        [showButtonBar]="true"
-      ></p-calendar>
-      <label for="startDate">Start Date</label>
-    </span>
-    <span class="select-container">
-      <p-calendar
-        [(ngModel)]="endDate"
-        inputId="endDate"
-        class="datepicker"
-        styleClass="w-full"
-        [showButtonBar]="true"
-      ></p-calendar>
-      <label for="endDate">End Date</label>
-    </span>
+    <p-divider></p-divider>
+    <div class="flex flex-column gap-2 mb-2">
+      <div class="flex flex-column gap-1">
+        <label class="text-sm mb-1">From</label>
+        <div class="flex gap-2">
+          <span class="select-container">
+            <p-calendar
+              [(ngModel)]="startDate"
+              inputId="startDate"
+              class="datepicker"
+              styleClass="w-full"
+              dateFormat="yy-m-d"
+              [showButtonBar]="true"
+            ></p-calendar>
+            <label for="startDate">Start Date</label>
+          </span>
+          <span class="select-container">
+            <p-calendar
+              [(ngModel)]="startTime"
+              inputId="startDate"
+              class="datepicker"
+              styleClass="w-full"
+              [showButtonBar]="true"
+              [timeOnly]="true"
+            ></p-calendar>
+            <label for="startDate">Time</label>
+          </span>
+        </div>
+      </div>
+      <div class="flex flex-column gap-1">
+        <label class="text-sm mb-1">To</label>
+        <div class="flex gap-2">
+          <span class="select-container">
+            <p-calendar
+              [(ngModel)]="endDate"
+              inputId="endDate"
+              class="datepicker"
+              styleClass="w-full"
+              dateFormat="yy-m-d"
+              [showButtonBar]="true"
+            ></p-calendar>
+            <label for="endDate">End Date</label>
+          </span>
+          <span class="select-container">
+            <p-calendar
+              [(ngModel)]="endTime"
+              inputId="endDate"
+              class="datepicker"
+              styleClass="w-full"
+              [showButtonBar]="true"
+              [timeOnly]="true"
+            ></p-calendar>
+            <label for="endDate">Time</label>
+          </span>
+        </div>
+      </div>
+    </div>
   </ng-container>
   <div class="grid">
     <div class="col-6">
